--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -1,1 +1,51 @@
-<p>basicos works!</p>
+<h2>Reactivos: Básicos</h2>
+<hr>
+<div class="row">
+    <div class="col">
+        <form  (ngSubmit)="guardar()" autocomplete="off" [formGroup]="miFormulario">
+            <!-- Campo de producto -->
+            <div class="mb-3 row">
+
+                <label class="col-sm-3 col-form-label">Producto</label>
+                <div class="col-sm-9">
+                    <input formControlName="nombre" type="text" class="form-control" placeholder="Nombre del producto">
+                    <span *ngIf="campoEsValido('nombre')" class="form-text text-danger">Debe tener 3 letras</span>
+                </div>
+            </div>
+
+            <!-- Campo de precio -->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">Precio</label>
+                <div class="col-sm-9">
+                    <input formControlName="precio" type="number" class="form-control" placeholder="Precio del producto">
+                    <span *ngIf="campoEsValido('precio')" class="form-text text-danger">El precio debe ser 0 o mayor</span>
+                </div>
+            </div>
+
+            <!-- Campo de existencias -->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">Existencias</label>
+                <div class="col-sm-9">
+                    <input formControlName="existencias" type="number" class="form-control" placeholder="Existencias del producto" >
+                    <span *ngIf="campoEsValido('existencias')" class="form-text text-danger">Las exustencias deben ser 0 o mayor</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <button type="submit" class="btn btn-primary float-end">Guardar</button>
+                </div>
+            </div>
+        </form>
+
+    </div>
+</div>
+
+<div class="row">
+    <div class="col"><span>Valid</span><pre>{{miFormulario.valid}}</pre></div>
+    <div class="col"><span>Pristine</span><pre>{{miFormulario.pristine}}</pre></div>
+    <div class="col"><span>Touched</span><pre>{{miFormulario.touched}}</pre></div>
+    <div class="col"><span>Valor</span><pre>{{miFormulario.value | json}}</pre></div>
+    <div class="col"><span>Precio</span><pre>{{miFormulario.controls['precio'].errors | json}}</pre></div>
+
+
+</div>
