--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -1,1 +1,73 @@
-<p>dinamicos works!</p>
+<h2>Reactivos: <small>Dinámicos</small></h2>
+<hr>
+
+<form  [formGroup]="miFormulario" autocomplete="off">
+    <!-- NOMBRE -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Nombre</label>
+        <div class="col-sm-9">
+            <input 
+            formControlName="nombre" 
+            class="form-control" placeholder="Nombre de la persona">
+            <span *ngIf="campoEsValido('nombre')" class="form-text text-danger">Este campo es obligatorio</span>
+        </div>
+    </div>
+
+    <!-- AGREGAR FAVORITO  -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Agregar</label>
+        <div class="col-sm-9" >
+            <div class="input-group mb-1" >
+                <input 
+                    [formControl] = "nuevoCampoFavorito"
+                    class="form-control" 
+                    placeholder="Agregar favorito"
+                    name="nuevoJuego"
+                    (keyup.enter)="agregarFavorito()">
+                <button 
+                    class="btn btn-outline-primary"
+                    type="button"
+                    (click)="agregarFavorito()"
+                    >Agregar</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- LISTA DE JUEGOS FAVORITOS -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Favoritos</label>
+        <div class="col-sm-9" formArrayName="favoritos">
+            <div class="input-group mb-1" 
+                *ngFor="let favorito of favoritosArr.controls; let i = index">
+                <input 
+                    [formControlName]="i"
+                    class="form-control">
+                <button 
+                    type="button" 
+                    class="btn btn-outline-danger" 
+                    (click)="eliminarControl(i)">Eliminar</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- BOTON GUARDAR -->
+    <div class="row">
+        <div class="col-sm-12">
+            <button class="btn btn-primary float-end" 
+                type="button"
+                (click)="guardar()">Guardar</button>
+        </div>
+    </div>
+</form>
+
+<span>Valid</span>
+<pre>{{miFormulario.valid}}</pre>
+<br>
+<span>Value</span>
+<pre>{{miFormulario.value  | json}}</pre>
+<span>Agregar Juego</span>
+<pre>{{nuevoCampoFavorito.valid}}</pre>
+<pre>{{nuevoCampoFavorito.value}}</pre>
+<!-- 
+<span>Pesona</span>
+<pre>{{persona | json}}</pre> -->
