--- a/src/app/reactive/switches/switches.component.html
+++ b/src/app/reactive/switches/switches.component.html
@@ -1,1 +1,83 @@
-<p>switches works!</p>
+<h2>Reactivos: <small>Switches</small></h2>
+<hr>
+
+<form [formGroup]="miFormulario" (ngSubmit)="guardar()">
+    <!-- RADIO -->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Género</label>
+        <div class="col-sm-9">
+
+            <div class="form-check">
+                <input formControlName="genero" class="form-check-input" type="radio"  value="M" id="radioMasculino">
+                <label class="form-check-label" for="radioMasculino">
+                    Masculino
+                </label>
+            </div>
+            <div class="form-check">
+                <input formControlName="genero" class="form-check-input" type="radio" value="F"  id="radioFemenino">
+                <label class="form-check-label" for="radioFemenino">
+                    Femenino
+                </label>
+            </div>
+
+        </div>
+
+    </div>
+
+    <!-- SWITCH  -->
+
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Notificaciones</label>
+
+        <div class="col-sm-9 mt-2">
+            <div class="form-check form-switch">
+                <input formControlName="notificaciones"class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">Quiero recibir notificaciones</label>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- CHECKBOX  -->
+
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label"></label>
+
+        <div class="col-sm-9">
+            <div class="form-check">
+                <input formControlName="terminos" class="form-check-input" type="checkbox" id="flexCheckDefault" name="terminos">
+                <label class="form-check-label" for="flexCheckDefault">
+                    Términos y Condiciones de uso
+                </label>
+            </div>
+        </div>
+    </div>
+
+    <!-- BOTON  -->
+
+    <div class="row">
+        <div class="col">
+            <button class="btn btn-primary float-end" type="submit">Guardar</button>
+        </div>
+    </div>
+
+</form>
+
+<h4>Valor de formulario</h4>
+<pre>{{miFormulario.value | json}}</pre>
+<hr>
+
+<div class="row">
+    <div class="col">
+        <h4>Persona</h4>
+        <pre>{{persona | json}}</pre>
+    </div>
+    <div class="col">
+        <h5>Valid</h5>
+        <pre>{{miFormulario.valid}}</pre>
+    </div>
+    <div class="col">
+        <h5>Terminos y Condiciones</h5>
+
+    </div>
+</div>
