--- a/src/app/template/basicos/basicos.component.html
+++ b/src/app/template/basicos/basicos.component.html
@@ -38,7 +38,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <button tyoe="submit" [disabled]="miFormulario.invalid" class="btn btn-primary float-end">Guardar</button>
+                    <button type="submit" [disabled]="miFormulario.invalid" class="btn btn-primary float-end">Guardar</button>
                 </div>
             </div>
         </form>
