--- a/src/app/shared/sidemenu/sidemenu.component.html
+++ b/src/app/shared/sidemenu/sidemenu.component.html
@@ -25,3 +25,16 @@
     </li>
 
 </ul>
+
+<h2>Validaciones</h2>
+<hr>
+
+<ul class="list-group">
+    <li class="list-group-item list-group-item-action"
+         *ngFor="let item of authMenu"
+         [routerLink]="item.ruta"
+         routerLinkActive="active">
+         {{item.texto}} 
+    </li>
+
+</ul>
